--- a/CTM/App.config
+++ b/CTM/App.config
@@ -6,6 +6,7 @@
   <appSettings>
     <add key="ScreenShotLocation" value="C:\IsdDev\" />
     <add key="Browser" value="firefox" />
+    <add key="URL" value="https://energy.comparethemarket.com/energy/v2/?AFFCLIE=TSTT" />
   </appSettings>
   <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
