--- a/CTM/packages.config
+++ b/CTM/packages.config
@@ -4,6 +4,8 @@
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.8.1" targetFramework="net461" />
+  <package id="Selenium.Chrome.WebDriver" version="2.32" targetFramework="net461" />
+  <package id="Selenium.Firefox.WebDriver" version="0.19.0" targetFramework="net461" />
   <package id="Selenium.Support" version="3.6.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.6.0" targetFramework="net461" />
   <package id="SpecFlow" version="2.2.1" targetFramework="net461" />
