--- a/CTM/packages.config
+++ b/CTM/packages.config
@@ -12,4 +12,6 @@
   <package id="SpecRun.Runner" version="1.6.2" targetFramework="net461" />
   <package id="SpecRun.SpecFlow" version="1.6.2" targetFramework="net461" />
   <package id="SpecRun.SpecFlow.2-2-0" version="1.6.2" targetFramework="net461" />
+  <package id="StyleCop.Error.MSBuild" version="1.0.0" targetFramework="net461" />
+  <package id="StyleCop.MSBuild" version="5.0.0" targetFramework="net461" developmentDependency="true" />
 </packages>
