--- a/CTM/CTM.csproj
+++ b/CTM/CTM.csproj
@@ -79,18 +79,19 @@
     <Compile Include="Browser\WebBrowser.cs">
       <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
     </Compile>
+    <Compile Include="Extensions\DriverExtensions.cs" />
     <Compile Include="Hooks\AfterScenarioHooks.cs" />
     <Compile Include="PageObjects\BasePageObject.cs" />
     <Compile Include="PageObjects\Details.cs" />
     <Compile Include="PageObjects\Energy.cs" />
     <Compile Include="PageObjects\Suppliers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\Features\CTM.feature.cs">
+    <Compile Include="Tests\Features\CTMEnergy.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>CTM.feature</DependentUpon>
+      <DependentUpon>CTMEnergy.feature</DependentUpon>
     </Compile>
-    <Compile Include="Tests\Steps\CTMSteps.cs" />
+    <Compile Include="Tests\Steps\CTMEnergySteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -105,14 +106,12 @@
     <None Include="SpecRunTestProfile_2011_09.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Tests\Features\CTM.feature">
+    <None Include="Tests\Features\CTMEnergy.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>CTM.feature.cs</LastGenOutput>
+      <LastGenOutput>CTMEnergy.feature.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Extensions\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
