--- a/CTM/CTM.csproj
+++ b/CTM/CTM.csproj
@@ -85,6 +85,7 @@
     <Compile Include="PageObjects\BasePageObject.cs" />
     <Compile Include="PageObjects\Details.cs" />
     <Compile Include="PageObjects\Energy.cs" />
+    <Compile Include="PageObjects\Results.cs" />
     <Compile Include="PageObjects\Suppliers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Features\CTMEnergy.feature.cs">
